--- a/app/src/main/res/layout/activity_busca_cep.xml
+++ b/app/src/main/res/layout/activity_busca_cep.xml
@@ -2,79 +2,156 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="15dp"
-    >
+    android:layout_margin="15dp" >
 
     <EditText
+        android:id="@+id/edtCep"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="0000-000"
-        android:numeric="decimal"
+        android:inputType="numberDecimal"
         android:gravity="center_horizontal"
-        android:id="@+id/edtCep"
         android:textSize="22dp"
-        android:maxLength="8"
-        />
+        android:layout_marginTop="18dp"
+        android:maxLength="8" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Buscar"
         android:id="@+id/btnChamaBuscaCEP"
-        android:textSize="25dp"
-        />
+        android:textSize="25dp" />
 
-    <TableLayout>
+    <GridLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginTop="18dp">
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/titulo_cep"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="CEP: "
+            android:layout_row="0"
+            android:layout_column="0" />
+
+        <TextView
             android:id="@+id/txtBC_cep"
-            android:gravity="center_horizontal"
-            android:textSize="20dp"
-            />
-
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="ver CEP"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:layout_row="0"
+            android:layout_column="1" />
+
+        <TextView
+            android:id="@+id/titulo_logradouro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logradouro: "
+            android:layout_row="1"
+            android:layout_column="0" />
+
+        <TextView
             android:id="@+id/txtBC_logradouro"
-            android:gravity="center_horizontal"
-            android:textSize="20dp"
-            />
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="ver Logradouro"
+            android:textStyle="bold"
+            android:textSize="16dp"
+            android:layout_row="1"
+            android:layout_column="1" />
+
+        <TextView
+            android:id="@+id/titulo_complemento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Complemento: "
+            android:layout_row="2"
+            android:layout_column="0" />
+
+        <TextView
             android:id="@+id/txtBC_complemento"
-            android:gravity="center_horizontal"
-            android:textSize="20dp"
-            />
-
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="ver Complemento"
+            android:textStyle="bold"
+            android:textSize="16dp"
+            android:layout_row="2"
+            android:layout_column="1" />
+
+        <TextView
+            android:id="@+id/titulo_bairro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bairro: "
+            android:layout_row="3"
+            android:layout_column="0" />
+
+        <TextView
             android:id="@+id/txtBC_bairro"
-            android:gravity="center_horizontal"
-            android:textSize="20dp"
-
-            />
-
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="ver Bairro"
+            android:textStyle="bold"
+            android:textSize="16dp"
+            android:layout_row="3"
+            android:layout_column="1" />
+
+        <TextView
+            android:id="@+id/titulo_localidade"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Localidade: "
+            android:layout_row="4"
+            android:layout_column="0" />
+
+        <TextView
             android:id="@+id/txtBC_localidade"
-            android:gravity="center_horizontal"
-            android:textSize="20dp"
-
-            />
-
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="ver Localidade"
+            android:textSize="16dp"
+            android:layout_row="4"
+            android:layout_column="1" />
+
+        <TextView
+            android:id="@+id/titulo_estado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Estado: "
+            android:layout_row="5"
+            android:layout_column="0" />
+
+        <TextView
+            android:id="@+id/txtBC_estado"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="ver Estado"
+            android:textSize="16dp"
+            android:layout_row="5"
+            android:layout_column="1" />
+
+        <TextView
+            android:id="@+id/titulo_ibge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cod. IBGE: "
+            android:layout_row="6"
+            android:layout_column="0" />
+
+        <TextView
             android:id="@+id/txtBC_ibge"
-            android:gravity="center_horizontal"
-            android:textSize="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ver IBGE"
+            android:textStyle="bold"
+            android:textSize="16dp"
+            android:layout_row="6"
+            android:layout_column="1" />
 
-            />
-
-    </TableLayout>
+    </GridLayout>
 </TableLayout>
